v2_backoffice/application/backoffice-backend-stg.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backoffice-backend
  labels:
    app: backoffice-backend
  namespace: backoffice-stg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backoffice-backend
  template:
    metadata:
      labels:
        app: backoffice-backend
    spec:
      containers:
        - name: backoffice-backend
          image: robireceptionbackoffice.azurecr.io/directory-backoffice-prod:directory-7153b60a
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: backend-volume
              mountPath: /uploads/luis
      volumes:
        - name: backend-volume
          hostPath:
            path: /uploads/luis
      imagePullSecrets:
        - name: private-repo-secret

---
apiVersion: v1
kind: Service
metadata:
  name: backoffice-backend-svc
  namespace: backoffice-stg
  labels:
    app: backoffice-backend
spec:
  ports:
    - name: backoffice-backend-rest
      port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app: backoffice-backend
