v2_backoffice/application/backoffice-front-stg.yaml
apiVersion: v1
kind: Service
metadata:
  name: backoffice-front-svc
  namespace: backoffice-stg
  labels:
    app: backoffice-front
spec:
  ports:
    - name: backoffice-web
      port: 80
      targetPort: 3000
  selector:
    app: backoffice-front
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backoffice-front
  labels:
    app: backoffice-front
  namespace: backoffice-stg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backoffice-front
  template:
    metadata:
      labels:
        app: backoffice-front
    spec:
      containers:
        - name: backoffice-front
          image: robireceptionbackoffice.azurecr.io/admin-front:latest
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: private-repo-secret
